Fixed IE Overlap + Changed colours

--- a/src/webparts/weatherWidget/components/ForecastDay/ForecastDay.module.scss
+++ b/src/webparts/weatherWidget/components/ForecastDay/ForecastDay.module.scss
@@ -1,58 +1,108 @@
 .dayContainer{
     display: grid;
-    grid-template-columns:3fr 1fr 1fr;
-    background-color: #EEE;
-    box-shadow: #AAA 1px 1px 1px;
+    grid-template-columns:3fr 1fr 2fr;
+    grid-template-rows: 28px 20px 20px 22px 22px;
+    background-color: #FFF;
+    border-color: "[theme: themePrimary, default: rgb(149, 211, 247)]";
+    border-width: 1px;
+    border-style: solid;
     margin: 4px;
     padding: 0px;
+
+    &:nth-child(1){
+        grid-column: 1;
+    }
+    &:nth-child(2){
+        grid-column: 2;
+    }
+    &:nth-child(3){
+        grid-column: 3;
+    }
+    &:nth-child(4){
+        grid-column: 4;
+    }
+    &:nth-child(5){
+        grid-column: 5;
+    }
+    &:nth-child(6){
+        grid-column: 6;
+    }
+    &:nth-child(7){
+        grid-column: 7;
+    }
     
     .forecastDay{
         font-size: 8pt;
-        grid-column: span 3;
+        grid-column: 1/span 3;
+        grid-row: 1;
         padding: 5px;
         margin: 0;
         margin-bottom: 5px;
-        background-color: rgb(149, 211, 247);
+        background-color: "[theme: themePrimary, default: rgb(149, 211, 247)]";
+        color: #fff;
+        display: inline-block;
     }
 
     .weatherIcon{
         align-self: center;
         font-size: 32px;
         text-align: center;
-        grid-row: span 2;
-        color: rgb(30, 144, 211);
+        grid-row: 2/span 2;
+        grid-column: 1;
+        color: "[theme: themePrimary, default:rgb(30, 144, 211)]";
     }
 
     .forecastTempText{
         text-align: center;
         align-self: center;
         padding: 0 4px 0 0;
+        grid-column: 3;
+        display: inline-block;
+        padding: 2px;
+    }
+    
+    .forecastTempTextHigh{
+        grid-row: 2;
+    }
+
+    .forecastTempTextLow{
+        grid-row: 3;
     }
 
     .forecastHighIcon{
-        color: rgb(255, 152, 83);
+        color: "[theme: themeSecondary, default: rgb(255, 152, 83)]";
         align-self: center;
         font-size: 8pt;
+        grid-row: 2;
+        grid-column: 2;
+        padding: 4px;
     }
 
     .forecastLowIcon{
-        color: rgb(84, 146, 238);
+        color: "[theme: themeDarkAlt, default: rgb(84, 146, 238)]";
         align-self: center;
         font-size: 8pt;
+        grid-row: 3;
+        grid-column: 2;
+        padding: 4px;
     }
 
     .forecastDate{
         font-size: 10pt;
         margin: 0;
-        grid-column: span 3;
+        grid-column: 1/span 3;
+        grid-row: 5;
         margin: 0 5px 5px 5px;
         color: #444;
+        display: inline-block;
     }
 
     .forecastText{
         font-size: 9pt;
-        grid-column: span 3;
+        grid-column: 1/span 3;
+        grid-row: 4;
         margin: 5px;
         color: #444;
+        display: inline-block;
     }
 }
