--- a/src/webparts/weatherWidget/components/WeatherWidget.module.scss
+++ b/src/webparts/weatherWidget/components/WeatherWidget.module.scss
@@ -4,18 +4,22 @@
   width:100%;
   display: grid;
   grid-template-columns: 9fr 3fr;
+  grid-template-rows: 40px 1fr;
 
   & > p{
     text-align: right;
     align-self: center;
+    grid-column: 2;
   }
 
   & > h3{
     align-self: center;
+    grid-column: 1;
   }
 
   .forecastContainer{
-    grid-column: span 2;
+    grid-column: 1/span 2;
+    grid-row: 2;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
   }
